# wgpu-osm-view

./: .gitignore  Cargo.toml  LICENSE.md  README.md
shaders/: shader.wgsl
src/: camera.rs  graphics.rs  main.rs  osm.rs  vertex.rs
