[package]
name = "wgpu-osm-view"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
bytemuck = { version = "1.16.3", features = ["derive"] }
compression = "0.1.5"
glam = { version = "0.28.0", features = ["bytemuck", "serde"] }
osmpbf = "0.3.4"
paste = "1.0.15"
pollster = "0.3.0"
serde = { version = "1.0.204", features = ["derive"] }
wgpu = "22.1.0"
winit = "0.29.0"
